# python_template_project

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: hw.py
tests/: test_hw.py
tests/features/: hello_world.feature
tests/steps/: hw_cli.py
